--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ p {
 }
 
 .message {
-  margin-top: -20rem;
+  margin-top: -25rem;
   margin-bottom: 3rem;
   padding: 2rem;
   background-image: url(/images/pattern-circles.svg);
@@ -54,11 +54,15 @@ p {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-.pricing-info {
+.pricing-info,
+.features {
   display: inline-flex;
   justify-content: space-evenly;
+  margin: 3.5rem 0 2rem 0;
+}
 
-  margin: 4rem 0 2rem 0;
+.features {
+  margin-top: 2rem;
 }
 
 .pageviews {
@@ -70,7 +74,6 @@ p {
 
 .per-month {
   color: var(--color-grayish-blue);
-  letter-spacing: 0.05rem;
   font-weight: 600;
 }
 
@@ -82,5 +85,134 @@ p {
 
 /* Slider */
 .slider {
+  position: relative;
+  margin-bottom: 3rem;
   max-width: 100%;
+}
+
+.range {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  width: 80%;
+  height: 0.5rem;
+  border-radius: 10px;
+  outline: none;
+  position: relative;
+  background: hsl(224, 65%, 95%);
+}
+
+.range::-webkit-slider-thumb {
+  -ms-appearance: none;
+  appearance: none;
+  width: 2.5rem;
+  height: 2.5rem;
+  background: url(../images/icon-slider.svg), hsl(174, 86%, 45%);
+  cursor: pointer;
+  border-radius: 50%;
+  box-shadow: 5px 10px 20px 5px hsl(174, 77%, 80%);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: 55%;
+  transition: all 0.2s ease-in-out;
+}
+
+.billing-info {
+  display: inline-flex;
+  justify-content: center;
+  color: var(--color-grayish-blue);
+  font-size: 0.8rem;
+  padding-bottom: 2rem;
+  border-bottom: 1px solid hsl(224, 65%, 95%);
+}
+
+.monthly {
+  position: relative;
+  padding: 0 1rem 0 5rem;
+}
+
+/* Toggle Switch */
+.switch-input {
+  position: absolute;
+  opacity: 0;
+}
+
+.switch-label {
+  display: flex;
+  align-items: center;
+}
+
+.switch {
+  display: inline-block;
+  position: relative;
+  height: 1.5rem;
+  width: 3rem;
+  background-color: hsl(223, 50%, 87%);
+  border-radius: 10rem;
+}
+
+.switch:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  z-index: 1;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-color: hsl(0, 0%, 100%);
+  left: 0.25rem;
+  top: 0.25rem;
+  transition: left 0.3s ease-in-out;
+}
+
+/* When the switch is toggled */
+.switch-input:checked + .switch {
+  background: linear-gradient(
+    90deg,
+    rgba(165, 243, 235, 1) 0%,
+    rgba(16, 213, 194, 1) 100%
+  );
+}
+
+.switch-input:checked + .switch:after {
+  left: 1.75rem;
+}
+
+.yearly {
+  padding-left: 1rem;
+}
+
+.discount {
+  font-size: 0.65rem;
+  font-weight: 800;
+  color: hsl(15, 100%, 70%);
+  background: hsl(14, 92%, 95%);
+  border-radius: 10px;
+  padding: 0 0.25rem;
+  margin-left: 0.5rem;
+}
+
+.feature-content {
+  font-size: 12px;
+  color: var(--color-grayish-blue);
+  text-align: left;
+  line-height: 2.25;
+}
+
+.btn {
+  width: 10rem;
+  padding: 0.8rem 0.75rem;
+  background-color: var(--color-dark-blue);
+  border-radius: 5rem;
+  border: none;
+  color: hsl(226, 100%, 87%);
+  font-size: 0.75rem;
+  font-weight: 600;
+  letter-spacing: 0.05rem;
+  margin: 1rem 0 0 0;
+}
+
+.icon-check {
+  padding-right: 0.75rem;
 }
